--- a/package.json
+++ b/package.json
@@ -3,25 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.3.3",
-    "moment": "2.22.2",
-    "core-js": "2.5.7",
-    "zone.js": "0.8.26",
+    "@angular/animations": "8.2.13",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "8.2.13",
+    "@angular/compiler": "8.2.13",
+    "@angular/core": "8.2.13",
+    "@angular/forms": "8.2.13",
+    "@angular/material": "8.2.3",
+    "@angular/platform-browser": "8.2.13",
+    "@angular/platform-browser-dynamic": "8.2.13",
+    "@angular/router": "8.2.13",
+    "@fortawesome/fontawesome-free": "5.11.2",
+    "core-js": "2",
     "hammerjs": "2.0.8",
-    "@angular/cdk": "6.4.7",
-    "@angular/core": "6.1.8",
-    "@angular/http": "6.1.8",
-    "@angular/forms": "6.1.8",
-    "@angular/common": "6.1.8",
-    "@angular/router": "6.1.8",
-    "@angular/compiler": "6.1.8",
-    "@angular/material": "6.4.7",
-    "web-animations-js": "2.3.1",
-    "@angular/animations": "6.1.8",
-    "@angular/platform-browser": "6.1.8",
-    "angular-in-memory-web-api": "0.5.4",
-    "@angular/material-moment-adapter": "6.4.7",
-    "@angular/platform-browser-dynamic": "6.1.8"
+    "ngx-gallery": "5.10.0",
+    "rxjs": "6.5.3",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.10.2"
   },
   "scripts": {
     "ng": "ng",
